@@ -1,6 +1,5 @@
 <?php
 
-
 /**
  * Copyright (c) 2011, Erasmus MC
  * All rights reserved.
@@ -63,6 +62,9 @@ class ShowTrackTokenSnippet extends Gems_Tracker_Snippets_ShowTokenSnippetAbstra
 
         // Extra item needed for menu items
         $bridge->gtr_track_type;
+        $bridge->gr2t_id_respondent_track;
+        $bridge->gr2o_patient_nr;
+        $bridge->gr2o_id_organization;
         $bridge->grc_success;
 
         $controller = $this->request->getControllerName();
